[package]
name        = "tapes"
version     = "0.0.1"
edition     = "2021"
description = "Cuprate's database abstraction"
license     = "MIT"
authors     = ["Boog900"]
repository  = "https://github.com/Cuprate/cuprate/tree/main/storage/linear-tape"
keywords    = ["cuprate", "database"]

[dependencies]
memmap2 = { version = "0.9" }
cuprate-rcu-ring = { path = "rcu-ring" }
bytemuck = { version = "1" }
