[package]
name        = "tapes"
version     = "0.0.1"
edition     = "2024"
description = "A minimal database for storing data in contigious tapes"
license     = "MIT"
authors     = ["Boog900"]
repository  = "https://github.com/Cuprate/tapes"
keywords    = ["tape", "database"]

[dependencies]
memmap2 = { version = "0.9" }
rcu-ring = { version = "0.0.1", path = "rcu-ring" }
bytemuck = { version = "1" }
